2006-05-12 nowel(S2Dao.PHP5-1.1.0-RC3)

    * fix: Dto処理を修正しました。
    * fix: SQLコメントのバインド変数処理を修正しました。

2006-05-08 nowel(S2Dao.PHP5-1.1.0-RC3)

    * S2DaoSkeletonTask を修正しました。

	* PROCEDURE アノテーション
	    - 現在OUT、INOUTパラメータを必要とするStored Function、Stored Procedureには対応していません。
	     IN パラメータのみバインドします。
    * PROCEDURE アノテーション対応DBMSが増えました。
        - PostgreSQL
        - SQLite
          - 詳しくはサンプルをご覧になってください。(StoredProcedureTestDao.class.php -> SALES_TAX2)
          * SQLite の場合 StoredFunction/Procedureに対応していないため
            PHP Functionを代用します。
            ref - http://jp.php.net/manual/en/function.pdo-sqlitecreatefunction.php

2006-05-03 nowel(S2Dao.PHP5-1.1.0-RC2)

================ S2Dao.PHP5-1.1.0-RC2 更新履歴 ===================

    * pear package に対応しました。
    * コメントアノテーションの記法をS2Dao-tiger風に変更しました。
    * E_STRICT レポートについて修正しました。
    * PROCEDURE アノテーションに対応しました。
        - 現在はMySQLのみStored Functionに対応しています。
    * PDOトランザクションの自動制御を提供しました。
    
2006-04-29 nowel(S2Dao.PHP5-1.1.0-RC2)

    * コメントアノテーションの記法をS2Dao-tigerとあわせました。
        - 詳細はドキュメントをご覧になってください。
    * E_STRICT レポートについて修正しました。
    * PROCEDURE に対応しました。
        - 現在はMySQLのみStored Functionに対応しています。

2006-04-14 nowel(S2Dao.PHP5-1.1.0-RC2)

    * pdoのトランザクション機構提供開始(alpha)
        - 詳細はドキュメントをご覧になってください。
        - examples/s2dao_selftransaction にサンプルがあるのでご覧になってください。
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_AbstractTxInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_RequiredInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_RequiresNewInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_MandatoryInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_NotSupportedInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_NeverInterceptor.class.php
    * modify: pdo.dicon
    	    <!--
        <component name="requiredTx" class="S2Dao_RequiredInterceptor" />